Created Department Controller and views

--- a/CadastroDeUsuario/appsettings.json
+++ b/CadastroDeUsuario/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CadastroDeUsuarioContext": "Server=(localdb)\\mssqllocaldb;Database=CadastroDeUsuarioContext-932f7cc0-1cc2-44bb-87e6-5d985d505c50;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
